--- a/lib/data/l10n/app_fr.arb
+++ b/lib/data/l10n/app_fr.arb
@@ -301,7 +301,7 @@
     }
   },
 
-  "search_employee_tag": "Rechercher un employé",
+  "search_employee_tag": "Rechercher un membre",
   "empty_leaves_message": "Il n'y a pas de congés, encore",
 
   "admin_leave_detail_enter_reason_tag": "Entrer le message",
